[package]
name = "rexer"
version = "0.1.0"
edition = "2021"
description = "Async I/O multiplexing library for rust"
authors = ["Ayman Al-Qadhi <alqd@protonmail.com>"]
repository = "https://github.com/real-evolution/remux"
license-file = "LICENSE"
readme = true
publish = true

[dependencies]
dashmap = { version = "5" }
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
fake = { version = "2" }
tokio = { version = "1", features = ["full"] }
rand = { version = "0" }
