[package]
name = "rexer"
version = "0.1.1"
edition = "2021"
description = "Async I/O multiplexing library for rust"
authors = ["Ayman Al-Qadhi <alqd@protonmail.com>"]
repository = "https://github.com/real-evolution/remux"
license-file = "LICENSE"
readme = true
publish = true

[features]
default = ["util"]
util = ["futures", "pin-project-lite", "tokio-util"]

[dependencies]
dashmap = { version = "5" }
tokio = { version = "1", features = ["sync"] }

# optional dependencies
futures = { version = "0", optional = true }
pin-project-lite = { version = "0", optional = true }
tokio-util = { version = "0", optional = true }

[dev-dependencies]
fake = { version = "2" }
tokio = { version = "1", features = ["full"] }
rand = { version = "0" }
